# Software_Engineering_Web_Project

./: .env-example  .gitignore  README.md  compose.yaml
.github/: dependabot.yml  pull_request_template.md
argocd/: production.yaml  staging.yaml
backend/: Dockerfile  api_skeleton.txt  makefile  manage.py  mock_data_create.py  pyproject.toml  requirements.txt
backend/apps/: api_urls.py
backend/apps/achievements/: models.py  permissions.py  serializers.py  views.py
backend/apps/achievements/migrations/: 0001_initial.py  0002_add_achievement_validation_triggers.py  0002_initial.py  0003_add_achievement_validation_triggers.py
backend/apps/achievements/tests/: test_views.py
backend/apps/authentication/: authentication.py  serializers.py  urls.py  views.py
backend/apps/authentication/tests/: test_authentication.py  test_serializers.py  test_views.py
backend/apps/common_commands/: apps.py
backend/apps/common_commands/management/commands/: makemockdb.py
backend/apps/glazes/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/glazes/migrations/: 0001_initial.py  0002_initial.py
backend/apps/reactions/: apps.py  models.py
backend/apps/reactions/migrations/: 0001_initial.py  0002_initial.py
backend/apps/tags/: apps.py  models.py
backend/apps/tags/migrations/: 0001_initial.py
backend/apps/teams/: models.py
backend/apps/teams/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: models.py  permissions.py  serializers.py  urls.py  user_stats.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_add_user_deactivation_trigger.py  0003_remove_user_deleted_after_created_alter_admin_user_and_more.py  0004_remove_user_deleted_after_created_and_more.py
backend/apps/users/tests/: test_models.py  test_permissions.py  test_serializers.py  test_views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: dev.py  test.py
backend/core/: apps.py  models.py  tests.py
backend/core/management/commands/: makemockdb.py
backend/core/migrations/: 0001_initial.py  0002_triggers.py
backend/glazedin/: settings.py  urls.py
backend/glazedin_backend/: models.py
backend/mock_data/: mock_posts.csv  mock_tags_reactions.csv  mock_team_names.csv  mock_users.csv
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
glazedin/: asgi.py  settings.py  wsgi.py
(+16 files in other folders)
