[project]
name = "backend"
version = "0.1.0"
description = "Backend for GlazedIn, a software engineering project, part of the Software Engineering course at AGH UST 2026. Written in Python using Django framework."
authors = [
    { name = "John Doe", email = "john.doe@example.com" },
    { name = "Jane Smith", email = "jane.smith@example.com" }
]
requires-python = ">=3.14"

dependencies = [
    "asgiref==3.11.1",
    "Django==6.0.5",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.7",
    "djangorestframework-simplejwt>=5.5",
    "psycopg==3.3.4",
    "sqlparse==0.5.5",
]

# Optional: separates dev-only deps cleanly
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
    "black",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = ["apps/*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, flakes, import sorting

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["E501", "F403", "F405"]  # Ignore line length and wildcard import errors in settings files

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.setuptools]
packages = ["config", "apps", "common"]
